syntax = "proto3";

package base_proto;

enum ChainRole {
    SettlementChain = 0;
    StorageShardChain = 10;
    DvmComputingChain = 20;
}

enum ChainId {
    MainNet = 0;
    TestNet = 10;
    DevNet = 20;
}

message BroadcastMeta {
    uint64 nonce = 1;
    ChainId chain_id = 2;
    ChainRole chain_role = 3;
}