syntax = "proto3";
package message_proto;

message DepositEvent {
    uint32 chain_id = 1;
    bytes sender = 2;
    uint64 amount = 3;
    uint64 block_id = 4;
    bytes transaction_id = 5;
    bytes signature = 6;
    bytes tx_signed_hash = 7;
}