pub mod base_proto {
    tonic::include_proto!("base_proto");
}
pub mod session_proto {
    tonic::include_proto!("session_proto");
}
pub mod mutation_proto {
    tonic::include_proto!("mutation_proto");
}
pub mod bill_proto {
    tonic::include_proto!("bill_proto");
}
pub mod account_proto {
    tonic::include_proto!("account_proto");
}
pub mod node_proto {
    tonic::include_proto!("node_proto");
}
pub mod database_proto {
    tonic::include_proto!("database_proto");
}
pub mod message_proto {
    tonic::include_proto!("message_proto");
}
pub mod faucet_proto {
    tonic::include_proto!("faucet_proto");
}
pub mod event_proto {
    tonic::include_proto!("event_proto");
}